--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="src\resources\circular logo website-01.png"
+      href="%PUBLIC_URL%\circular logo website-01.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Walter's Portfolio</title>
